[tool.poetry]
name = "python-project-config"
version = "0.1.0"
description = ""
authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
readme = "README.md"
packages = [{include = "python_project_config"}]

[tool.poetry.dependencies]
python = "^2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
